--- a/hao.html
+++ b/hao.html
@@ -709,15 +709,15 @@
                     </div>
                 </div>
                 <ul class="categories" id="categories-list">
-                    <li><a href="#A" class="category-btn active"><div class="category-icon"></div>常用推荐</a></li>
+                    <li><a href="#A" class="category-btn active"><div class="category-icon"></div>热门推荐</a></li>
                     <li><a href="#B" class="category-btn"><div class="category-icon"></div>字体设计</a></li>
-                    <li><a href="#C" class="category-btn"><div class="category-icon"></div>视觉灵感</a></li>
+                    <li><a href="#C" class="category-btn"><div class="category-icon"></div>平面灵感</a></li>
                     <li><a href="#D" class="category-btn"><div class="category-icon"></div>AI工具</a></li>
                     <li><a href="#E" class="category-btn"><div class="category-icon"></div>免版权资源</a></li>
                     <li><a href="#F" class="category-btn"><div class="category-icon"></div>设计工具</a></li>
                     <li><a href="#G" class="category-btn"><div class="category-icon"></div>设计素材</a></li>
                     <li><a href="#H" class="category-btn"><div class="category-icon"></div>配色方案</a></li>
-                    <li><a href="#I" class="category-btn"><div class="category-icon"></div>知识社区</a></li>
+                    <li><a href="#I" class="category-btn"><div class="category-icon"></div>设计学习</a></li>
                     <li><a href="#J" class="category-btn"><div class="category-icon"></div>软件工具</a></li>
                 </ul>
             </div>
@@ -740,28 +740,27 @@
                         <button id="search-button"><i class="fas fa-search"></i></button>
                     </div>
                     <div class="quick-links-area">
-                        <span class="quick-link-btn" data-link="https://www.zizao.top">首页</span>
-                        <span class="quick-link-btn" data-link="https://www.zizao.top/fonts">自在造字</span>
-                        <span class="quick-link-btn" data-link="https://www.pinterest.com">Pinterest</span>
-                        <span class="quick-link-btn" data-link="https://chat.deepseek.com">Deepseek</span>
-                        <span class="quick-link-btn" data-link="https://www.wenxiaobai.com">问小白AI</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top">自在造字首页</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top/fonts">字库产品</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top/bao">设计资源</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top/tools/txt">文本编辑器</span>
+                        <span class="quick-link-btn" data-link="https://snapany.com/zh">万能视频下载</span>
                         <span class="quick-link-btn" data-link="https://gemini.google.com/app">Google Gemini</span>
+                        <span class="quick-link-btn" data-link="https://github.com">Github</span>
                     </div>
                 </div>
                 <section id="A" class="category-section">
-                    <h2>常用推荐</h2>
+                    <h2>热门推荐</h2>
                     <div class="subcategory-tabs">
-                        <div class="subcategory-tab active" data-category="A" data-subcategory="A1">#精选推荐</div>
+                        <div class="subcategory-tab active" data-category="A" data-subcategory="A1">#每日常用</div>
                         <div class="subcategory-tab" data-category="A" data-subcategory="A2">#影音视听</div>
                         <div class="subcategory-tab" data-category="A" data-subcategory="A3">#博客社区</div>
-                        <div class="subcategory-tab" data-category="A" data-subcategory="A4">#学习生活</div>
-                        <div class="subcategory-tab" data-category="A" data-subcategory="A5">#在线娱乐</div>
+                        <div class="subcategory-tab" data-category="A" data-subcategory="A4">#在线娱乐</div>
                     </div>
                     <div class="cards-container" id="A-A1"></div>
                     <div class="cards-container hidden" id="A-A2"></div>
                     <div class="cards-container hidden" id="A-A3"></div>
                     <div class="cards-container hidden" id="A-A4"></div>
-                    <div class="cards-container hidden" id="A-A5"></div>
                 </section>
                 <section id="B" class="category-section">
                     <h2> 字体设计</h2>
@@ -779,7 +778,7 @@
                     <div class="cards-container hidden" id="B-B5"></div>
                 </section>
                 <section id="C" class="category-section">
-                    <h2>视觉灵感</h2>
+                    <h2>平面灵感</h2>
                     <div class="subcategory-tabs">
                         <div class="subcategory-tab active" data-category="C" data-subcategory="C1">#版式设计</div>
                         <div class="subcategory-tab" data-category="C" data-subcategory="C2">#品牌VI</div>
@@ -873,7 +872,7 @@
                     <div class="cards-container hidden" id="H-H2"></div>
                 </section>
                 <section id="I" class="category-section">
-                    <h2>知识社区</h2>
+                    <h2>设计学习</h2>
                     <div class="subcategory-tabs">
                         <div class="subcategory-tab active" data-category="I" data-subcategory="I1">#设计书籍</div>
                     </div>
@@ -907,7 +906,7 @@
         const appConfig = {
             categories: ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J'],
             subcategories: {
-                A: ['A1', 'A2', 'A3', 'A4', 'A5'],
+                A: ['A1', 'A2', 'A3', 'A4'],
                 B: ['B1', 'B2', 'B3', 'B4', 'B5'],
                 C: ['C1', 'C2', 'C3', 'C4'],
                 D: ['D1', 'D2', 'D3', 'D4'],
