--- a/hao.html
+++ b/hao.html
@@ -740,12 +740,12 @@
                         <button id="search-button"><i class="fas fa-search"></i></button>
                     </div>
                     <div class="quick-links-area">
-                        <span class="quick-link-btn" data-link="https://www.zizao.top">自在造字首页</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top">首页</span>
                         <span class="quick-link-btn" data-link="https://www.zizao.top/fonts">字库产品</span>
                         <span class="quick-link-btn" data-link="https://www.zizao.top/bao">设计资源</span>
                         <span class="quick-link-btn" data-link="https://www.zizao.top/tools/txt">文本编辑器</span>
                         <span class="quick-link-btn" data-link="https://snapany.com/zh">万能视频下载</span>
-                        <span class="quick-link-btn" data-link="https://gemini.google.com/app">Google Gemini</span>
+                        <span class="quick-link-btn" data-link="https://gemini.google.com/app">Gemini</span>
                         <span class="quick-link-btn" data-link="https://github.com">Github</span>
                     </div>
                 </div>
