--- a/bao.html
+++ b/bao.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>设计资源宝库 - 自在造字（字造ZIZAO）</title>
-    <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。">
-    <link rel="icon" href="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/gOQi/ico.ico" type="zizaoicon">
+    <title>设计资源 - 自在造字(ZIZAO)</title>
+    <meta name="description" content="自在造字，专注字体字库产品制作与分享">
+    <meta name="author" content="自在造字">
+    <meta property="og:title" content="设计资源 - 自在造字(ZIZAO)">
+    <meta property="og:image" content="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/abRh/500X180/logo.png/webp">
+    <meta property="og:url" content="https://www.zizao.top">
+    <meta property="og:type" content="website">
+    <link rel="icon" href="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/8hkj/ico.ico" type="zizaoicon">
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -507,7 +512,7 @@
             <div class="hero-background"></div>
             <div class="hero-overlay"></div>
             <div class="search-content">
-                <h1>设计资源宝库</h1>
+                <h1>设计资源</h1>
                 <div class="search-box">
                     <input type="text" id="fontSearchInput" placeholder="请输入关键词...">
                     
