--- a/fonts/i/qidiansans.html
+++ b/fonts/i/qidiansans.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>字造起点黑 - 自在造字（字造ZIZAO）</title>
-    <meta name="description" content="宋体·沉静 字体产品详情，了解其设计理念、字重信息和授权方式。">
-    <meta name="keywords" content="宋体, 沉静, 字库, 字体设计, 授权, 字重">
-    <meta name="author" content="字造">
-    <meta property="og:title" content="宋体 · 沉静 - 字体详情">
-    <meta property="og:description" content="宋体·沉静 字体产品详情，了解其设计理念、字重信息和授权方式。">
-    <meta property="og:image" content="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBbDMDErs/20250803/9BXx/1108X308/logo.png">
-    <meta property="og:url" content="https://www.zizao.top/font-detail.html">
+    <title>字造起点黑 - 自在造字(ZIZAO)</title>
+    <meta name="description" content="自在造字，专注字体字库产品制作与分享">
+    <meta name="author" content="自在造字">
+    <meta property="og:title" content="字造起点黑 - 自在造字(ZIZAO)">
+    <meta property="og:image" content="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/abRh/500X180/logo.png/webp">
+    <meta property="og:url" content="https://www.zizao.top">
     <meta property="og:type" content="website">
-    <link rel="icon" href="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/gOQi/ico.ico" type="zizaoicon">
+    <link rel="icon" href="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/8hkj/ico.ico" type="zizaoicon">
 
     <style>
         /* =================================================================
