--- a/hao.html
+++ b/hao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>设计导航 - 自在造字（字造ZIZAO）</title>
+    <title>设计导航 - 自在造字(ZIZAO)</title>
     
     <meta name="description" content="自在造字，专注字体字库产品制作与分享">
     <meta name="author" content="自在造字">
