--- a/tools/txt.html
+++ b/tools/txt.html
@@ -12,6 +12,8 @@
     <meta property="og:type" content="website">
     <link rel="icon" href="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/8hkj/ico.ico" type="zizaoicon">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
