--- a/fonts/index.html
+++ b/fonts/index.html
@@ -366,7 +366,7 @@
         // ----------------------------------------------------
         const fontData = [
             { name: '字造起点黑 · 即将上线', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/fonts/i/qidiansans', tags: [ '正文', '免费商用'] },
-            { name: '在线体验 · 全部字体', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/fonts/web', tags: [ '免费商用'] },
+            { name: '字体设计 · 作品展示', coverUrl: 'https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp', detailUrl: 'https://www.zizao.top/work', tags: [ '免费商用'] },
         ];
         
         // 自动生成分类标签
