--- a/tools/shufa.html
+++ b/tools/shufa.html
@@ -370,7 +370,7 @@
     </div>
     
     <div id="footerNote">
-        PS：本页面内容全部来自外部站点，本站不承担任何责任
+        说明：本页内容均为外站镜像，仅作为展示使用
     </div>
 
     <script src="https://www.zizao.top/pages/common.js"></script>
@@ -437,7 +437,7 @@
         const HIDE_TOP_PARAM = "hide_top_px";
 
         const URL_CONFIGS = [
-            { id: 'A', name: "湖南字根书法", base: "https://zgzd.wantuyun.cn/dictionary/search?word=", queryParam: "char", hideValue: "750" },
+            { id: 'A', name: "字根书法", base: "https://zgzd.wantuyun.cn/dictionary/search?word=", queryParam: "char", hideValue: "750" },
             { id: 'B', name: "梅花书检", base: "https://www.mhsj.top/index/index/index.html?querytype=1&keyword=", queryParam: "q", hideValue: "720" },
             { id: 'C', name: "好查书法", base: "https://shufa.hao86.com/", queryParam: "hao", hideValue: "420" }
         ];
