--- a/bao.html
+++ b/bao.html
@@ -653,7 +653,7 @@
             let mainInfo = '';
 
             if (!isSearching) {
-                mainInfo = `为您推荐热门的 ${displayCount} 个资源`;
+                mainInfo = `为您推荐 ${displayCount} 个热门的设计资源`;
             } else {
                 mainInfo = `找到 ${displayCount} 个匹配结果`;
             }
