--- a/qidiansans.html
+++ b/qidiansans.html
@@ -57,7 +57,7 @@
         .menu-item:hover .menu-link::after { width: 20px; }
         
         /* 下拉菜单 */
-        .dropdown { position: absolute; top: 80px; left: 50%; transform: translateX(-50%) translateY(20px); background-color: #fff; min-width: 220px; padding: 20px 0; border-radius: 4px; box-shadow: 0 15px 40px rgba(0, 0, 0, 0.08); opacity: 0; visibility: hidden; transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1); }
+        .dropdown { position: absolute; top: 80px; left: 50%; transform: translateX(-50%) translateY(20px);background-color: rgba(255, 255, 255, 0.98);backdrop-filter: blur(10px);min-width: 220px; padding: 20px 0; border-radius: 4px; box-shadow: 0 15px 40px rgba(0, 0, 0, 0.08); opacity: 0; visibility: hidden; transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1); }
         .menu-item:hover .dropdown { opacity: 1; visibility: visible; transform: translateX(-50%) translateY(0); }
         .dropdown li { list-style: none; }
         .dropdown-link { display: block; padding: 12px 30px; text-decoration: none; color: #666; font-size: 14px; transition: all 0.3s ease; display: flex; justify-content: space-between; align-items: center; }
