--- a/bao.html
+++ b/bao.html
@@ -458,7 +458,7 @@
     
     <script src="https://www.zizao.top/pages/common.js"></script> 
     
-    <script src="https://www.zizao.top/pages/data.js"></script>
+    <script src="https://www.zizao.top/pages/bao-data.js"></script>
 
     <script>
         // --- 1. 状态管理 ---
