--- a/bao.html
+++ b/bao.html
@@ -434,7 +434,7 @@
                 
                 <aside class="sidebar" id="sidebar">
                     <div class="search-container">
-                        <input type="text" id="font-search-input" placeholder="输入字体名称进行搜索...">
+                        <input type="text" id="font-search-input" placeholder="输入关键词搜索...">
                     </div>
                     
                     <div id="sidebar-filters">
