--- a/bao.html
+++ b/bao.html
@@ -9,18 +9,14 @@
     <meta property="og:title" content="AI 提示词画廊 - 自在造字(ZIZAO)">
     <link rel="icon" href="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/8hkj/ico.ico" type="zizaoicon">
     
-    <!-- 1. 引入 Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <!-- 2. 引入 React 和 Babel -->
     <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <!-- 3. 引入外部数据文件 -->
     <script src="https://www.zizao.top/pages/bao-data.js"></script>
 
-    <!-- 4. 配置字体和主题颜色 (FF8C19) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
@@ -65,7 +61,6 @@
 <body class="bg-slate-50 text-slate-900 antialiased overflow-hidden">
     <div id="root"></div>
 
-    <!-- 5. 核心 React 代码 -->
     <script type="text/babel">
         const { useState, useMemo, useRef, useEffect } = React;
 
@@ -188,9 +183,11 @@
                             </div>
                             <textarea value={promptText} onChange={(e) => setPromptText(e.target.value)} className="w-full bg-transparent border-none resize-none p-3 text-sm text-slate-600 focus:ring-0 custom-scrollbar leading-relaxed h-[80px]" placeholder="Enter prompt here..." />
                         </div>
+                        {/* 移除标签部分
                         <div className="mt-auto flex items-center gap-2 overflow-hidden flex-wrap">
                             {item.tags?.map((tag, idx) => <span key={idx} className="text-[10px] px-2 py-1 rounded-md bg-slate-100 text-slate-500 font-medium hover:bg-primary-50 hover:text-primary-600 transition-colors cursor-default">{tag}</span>)}
                         </div>
+                        */}
                     </div>
                 </div>
             );
@@ -198,30 +195,26 @@
 
         const FontCard = ({ item }) => {
             return (
-                <div className="bg-white rounded-2xl border border-slate-200 overflow-hidden group hover:border-primary-100 hover:shadow-lg transition-all duration-300 flex flex-col h-full">
-                    <div className="relative h-40 w-full bg-slate-50 overflow-hidden flex items-center justify-center p-6 shrink-0">
-                        <img src={item.imageUrl} alt={item.name} className="w-full h-full object-contain filter grayscale group-hover:grayscale-0 transition-all duration-500" />
-                        <div className="absolute inset-0 bg-primary-600/80 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center backdrop-blur-sm">
-                            <a href={item.downloadUrl} target="_blank" className="transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300 flex items-center gap-2 px-5 py-2.5 bg-white rounded-full font-medium text-primary-600 hover:bg-primary-50 shadow-xl">
-                                <Icons.Download size={18} /><span>下载字体</span>
-                            </a>
-                        </div>
-                    </div>
-                    <div className="p-5 flex-1 flex flex-col">
-                        <div className="flex items-center justify-between mb-2">
-                            <div className="flex flex-col"><h3 className="text-lg font-bold text-slate-900 leading-tight">{item.name}</h3><span className="text-xs text-slate-400 mt-0.5">{item.author}</span></div>
-                            <span className={`px-2.5 py-1 rounded-full text-xs font-semibold uppercase tracking-wider ${item.isPaid ? 'bg-amber-100 text-amber-700 border border-amber-200' : 'bg-emerald-100 text-emerald-700 border border-emerald-200'}`}>{item.isPaid ? '付费' : '免费'}</span>
-                        </div>
-                        <p className="text-sm text-slate-500 line-clamp-2 leading-relaxed mb-4 h-10">{item.description}</p>
-                        <div className="mt-auto flex items-center justify-between border-t border-slate-100 pt-3">
-                            <div className="flex items-center gap-3">
-                                <div className="flex items-center gap-1 text-[10px] text-slate-400 font-medium uppercase bg-slate-50 px-1.5 py-0.5 rounded"><Icons.FileType size={10} />{item.format}</div>
-                                <div className="flex items-center gap-1 text-[10px] text-slate-400 font-medium uppercase bg-slate-50 px-1.5 py-0.5 rounded"><Icons.HardDrive size={10} />{item.size}</div>
+                <a href={item.downloadUrl} target="_blank" className="block h-full">
+                    <div className="bg-white rounded-2xl border border-slate-200 overflow-hidden group hover:border-primary-100 hover:shadow-lg transition-all duration-300 flex flex-col h-full cursor-pointer">
+                        <div className="relative h-40 w-full bg-slate-50 overflow-hidden flex items-center justify-center p-6 shrink-0">
+                            <img src={item.imageUrl} alt={item.name} className="w-full h-full object-contain filter grayscale group-hover:grayscale-0 transition-all duration-500" />
+                            <div className="absolute inset-0 bg-primary-600/80 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center backdrop-blur-sm">
+                                <div className="transform translate-y-4 group-hover:translate-y-0 transition-transform duration-300 flex items-center gap-2 px-5 py-2.5 bg-white rounded-full font-medium text-primary-600 hover:bg-primary-50 shadow-xl">
+                                    <Icons.Download size={18} /><span>下载字体</span>
+                                </div>
                             </div>
-                            <a href={item.downloadUrl} target="_blank" className="inline-flex items-center text-xs font-semibold text-primary-500 hover:text-primary-600 transition-colors">详情 <Icons.ExternalLink size={12} className="ml-1" /></a>
+                        </div>
+                        <div className="p-5 flex-1 flex flex-col">
+                            <div className="flex items-center justify-between mb-2">
+                                <div className="flex flex-col"><h3 className="text-lg font-bold text-slate-900 leading-tight">{item.name}</h3><span className="text-xs text-slate-400 mt-0.5">{item.author}</span></div>
+                                <span className={`px-2.5 py-1 rounded-full text-xs font-semibold uppercase tracking-wider ${item.isPaid ? 'bg-amber-100 text-amber-700 border border-amber-200' : 'bg-emerald-100 text-emerald-700 border border-emerald-200'}`}>{item.isPaid ? '付费' : '免费'}</span>
+                            </div>
+                            <p className="text-sm text-slate-500 line-clamp-2 leading-relaxed mb-4 h-10">{item.description}</p>
+                            <div className="mt-auto pt-3">{/* 移除底部的格式、大小和详情链接 */}</div>
                         </div>
                     </div>
-                </div>
+                </a>
             );
         };
 
