--- a/bao.html
+++ b/bao.html
@@ -325,7 +325,7 @@
                                 </button>
                                 {isToolsOpen && (
                                     <div className="absolute right-0 top-full mt-2 w-64 bg-white rounded-xl shadow-xl border border-slate-100 p-2 z-50 animate-in fade-in slide-in-from-top-2 duration-200">
-                                        <div className="px-3 py-2 text-xs font-semibold text-slate-400 uppercase tracking-wider">点击跳转其他工具</div>
+                                        <div className="px-3 py-2 text-xs font-semibold text-slate-400 uppercase tracking-wider">更多工具</div>
                                         <div className="space-y-1">{EXTERNAL_TOOLS && EXTERNAL_TOOLS.map((tool) => (<a key={tool.name} href={tool.url} target="_blank" className="flex items-center justify-between w-full px-3 py-2.5 rounded-lg text-sm text-slate-600 hover:bg-slate-50 hover:text-primary-500 transition-colors group"><span>{tool.name}</span><Icons.ExternalLink size={14} className="opacity-0 group-hover:opacity-100 transition-opacity" /></a>))}</div>
                                     </div>
                                 )}
