--- a/bao.html
+++ b/bao.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    <script src="https://www.zizao.top/pages/bao-data.js"></script>
+    <script src="bao-data.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -110,7 +110,7 @@
         const Sidebar = ({ currentView, onViewChange }) => {
             const navItems = [
                 { id: 'ai-prompts', label: 'AI 提示词', icon: Icons.Sparkles },
-                { id: 'fonts', label: '免费字体推荐', icon: Icons.Type },
+                { id: 'fonts', label: '免费字体', icon: Icons.Type },
                 { id: 'software', label: '软件工具', icon: Icons.Box },
             ];
 
