--- a/bao.html
+++ b/bao.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -148,7 +147,7 @@
             };
 
             return (
-                <div className="bg-white rounded-2xl border border-slate-200 overflow-hidden flex flex-col shadow-sm hover:shadow-lg transition-all duration-300 group h-full hover:-translate-y-1">
+                <div className="bg-white rounded-2xl border border-slate-200 overflow-hidden flex flex-col shadow-sm hover:shadow-lg transition-all duration-300 group h-full hover:-translate-y-1 transform-gpu will-change-transform">
                     <div className="relative h-48 w-full bg-slate-100 overflow-hidden shrink-0">
                         <img src={item.imageUrl} alt={item.title} className="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105" />
                         <div className="absolute inset-0 bg-black/0 group-hover:bg-black/10 transition-colors duration-300" />
@@ -178,7 +177,7 @@
         const FontCard = ({ item }) => {
             return (
                 <a href={item.downloadUrl} target="_blank" className="block h-full">
-                    <div className="bg-white rounded-2xl border border-slate-200 overflow-hidden group hover:border-primary-100 hover:shadow-lg transition-all duration-300 flex flex-col h-full cursor-pointer relative hover:-translate-y-1">
+                    <div className="bg-white rounded-2xl border border-slate-200 overflow-hidden group hover:border-primary-100 hover:shadow-lg transition-all duration-300 flex flex-col h-full cursor-pointer relative hover:-translate-y-1 transform-gpu will-change-transform">
                         {/* 修改：高度增加到 h-40 (160px)，使其不那么扁 */}
                         <div className="relative h-40 w-full bg-slate-100 overflow-hidden flex items-center justify-center shrink-0">
                             <img src={item.imageUrl} alt={item.name} className="w-full h-full object-cover filter grayscale group-hover:grayscale-0 transition-all duration-500" />
@@ -205,7 +204,7 @@
 
         const SoftwareCard = ({ item }) => {
             return (
-                <div className="bg-white rounded-2xl border border-slate-200 p-5 hover:shadow-lg transition-all duration-300 flex flex-col md:flex-row gap-6 hover:-translate-y-1">
+                <div className="bg-white rounded-2xl border border-slate-200 p-5 hover:shadow-lg transition-all duration-300 flex flex-col md:flex-row gap-6 hover:-translate-y-1 transform-gpu will-change-transform overflow-hidden">
                     <div className="w-full md:w-48 h-48 shrink-0 bg-slate-100 rounded-xl overflow-hidden border border-slate-100 relative group">
                         <img src={item.imageUrl} alt={item.title} className="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110" />
                         <div className="absolute top-2 left-2"><div className="bg-white/90 backdrop-blur rounded-md px-2 py-1 text-xs font-bold text-slate-700 shadow-sm border border-slate-200">v{item.version}</div></div>
@@ -346,7 +345,7 @@
                                         value={searchQuery}
                                         onChange={handleSearch}
                                         className="block w-full pl-10 pr-4 py-2.5 border border-slate-200 rounded-xl leading-5 bg-slate-50 text-slate-900 placeholder-slate-400 focus:outline-none focus:bg-white focus:ring-2 focus:ring-primary-100 focus:border-primary-500 transition-all duration-200 sm:text-sm shadow-sm hover:shadow-md"
-                                        placeholder="搜索字体卡片标题..." 
+                                        placeholder="搜索字体..." 
                                     />
                                     {searchQuery && (
                                         <button onClick={() => {setSearchQuery(''); setActiveCategory('all');}} className="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-slate-400 hover:text-slate-600">
@@ -379,7 +378,7 @@
                                             </button>
                                         ))}
                                     </div>
-                                    <span className="text-xs text-slate-400 font-medium shrink-0 ml-2">{filteredData.length} 个资源</span>
+                                    <span className="text-xs text-slate-400 font-medium shrink-0 ml-2">为您加载 {filteredData.length} 个资源</span>
                                 </div>
                                 {renderContent()}
                                 <div className="h-12"></div>
