--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
         <!-- 2. 社交媒体区域 (圆形图标，居中) -->
         <div class="social-section">
              <a href="https://www.douyin.com/user/MS4wLjABAAAAHS3xXmx-djagMBtv5pfJpJ_awJuC5Du8SnXDC8AYPI4Wr4lQpJllFxZDUEOCpZ8k" target="_blank" class="social-item">
-                <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251117/IvGF/4167X1000/10.png/webp" alt="抖音">
+                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/2Vtm/100X100/dy.webp/webp" alt="抖音">
             </a>
             
              <a href="https://www.xiaohongshu.com/user/profile/678f47130000000007000eaa" target="_blank" class="social-item">
-                <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251117/KgFY/4167X1000/12.png/webp" alt="小红书">
+                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Ayt2/101X100/xhs.webp/webp" alt="小红书">
             </a>
 
              <a href="https://www.zcool.com.cn/u/15462186" target="_blank" class="social-item">
-                <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251117/VJdI/4167X1000/11.png/webp" alt="站酷">
+                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/mOb4/101X100/zk.webp/webp" alt="站酷">
             </a>
 
              <a href="https://space.bilibili.com/339715446" target="_blank" class="social-item">
-                <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251117/CQGj/4167X1000/13.png/webp" alt="B站">
+                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/msSh/101X100/b.webp/webp" alt="B站">
             </a>
 
              <a href="https://weibo.com/u/7931697572" target="_blank" class="social-item">
-                <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251117/oMwQ/4167X1000/14.png/webp" alt="微博">
+                <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250802/Z51u/101X100/wb.webp/webp" alt="微博">
             </a>
         </div>
         
