--- a/hao.html
+++ b/hao.html
@@ -8,7 +8,7 @@
     <meta name="description" content="自在造字，专注字体字库产品制作与分享">
     <meta name="author" content="自在造字">
     <meta property="og:title" content="设计资源 - 自在造字(ZIZAO)">
-    <meta property="og:image" content="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/abRh/500X180/logo.png/webp">
+    <meta property="og:image" content="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251123/AR9P/ico.ico">
     <meta property="og:url" content="https://www.zizao.top">
     <meta property="og:type" content="website">
     <link rel="icon" href="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/8hkj/ico.ico" type="zizaoicon">
@@ -705,7 +705,7 @@
             <div class="sidebar" id="sidebar">
                 <div class="sidebar-header">
                     <div class="custom-logo" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">
-                        <img src="https://tc.z.wiki/autoupload/f/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20250803/2tE5/219X79/haologo.png" alt="haoLogo">
+                        <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251123/D8a9/219X79/haologo.png/webp" alt="haoLogo">
                     </div>
                 </div>
                 <ul class="categories" id="categories-list">
