--- a/fonts.html
+++ b/fonts.html
@@ -141,9 +141,9 @@
                         <li class="category-item">
                             <div class="category-header open">风格筛选<span>▼</span></div>
                             <ul class="subcategory-list style-grid" style="max-height: 500px;">
-                                <li><a href="#modern" class="subcategory-link" data-hash="modern">现代简约</a></li>
-                                <li><a href="#retro" class="subcategory-link" data-hash="retro">复古书法</a></li>
-                                <li><a href="#tech" class="subcategory-link" data-hash="tech">科技未来</a></li>
+                                <li><a href="#modern" class="subcategory-link" data-hash="modern">现代</a></li>
+                                <li><a href="#retro" class="subcategory-link" data-hash="retro">复古</a></li>
+                                <li><a href="#tech" class="subcategory-link" data-hash="tech">科技</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -168,9 +168,7 @@
     <script>
         // 注意：url 请根据实际部署位置调整
         const FONT_DATA = [
-            { id: 1, name: "自在起点黑 VF", author: "FontStudio", category: "sans_serif", style: "modern", weight: "2025年8月7日", cover: "https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp", url: "fonts/qidiansans.html" },
-            { id: 2, name: "经典宋体 Std", author: "TypeFoundry", category: "serif", style: "retro", weight: "4 Styles", cover: "https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp", url: "#" },
-            { id: 3, name: "流光手写体", author: "HandWriter", category: "display", style: "retro", weight: "1 Style", cover: "https://tc-new.z.wiki/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251005/KII0/930X710/index1.jpg/webp", url: "#" },
+            { id: 1, name: "自在起点黑VF", author: "免费商用双轴可变字体", category: "sans_serif", style: "modern", weight: "2025年8月7日", cover: "https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251123/CX0k/4084X2500/1.png/webp", url: "fonts/qidiansans.html" },
         ];
         const FILTER_MAP = { 'all': '全部字体', 'sans_serif': '黑体', 'serif': '宋体', 'display': '创意', 'modern': '现代', 'retro': '复古', 'tech': '科技' };
         
