--- a/hao.html
+++ b/hao.html
@@ -744,6 +744,7 @@
                         <span class="quick-link-btn" data-link="https://www.zizao.top/fonts">字体产品</span>
                         <span class="quick-link-btn" data-link="https://www.zizao.top/bao">设计百宝库</span>
                         <span class="quick-link-btn" data-link="https://snapany.com/zh">下载视频</span>
+                        <span class="quick-link-btn" data-link="https://www.zizao.top/tools/txt">自在文本编辑器Pro</span>
                         <span class="quick-link-btn" data-link="https://aistudio.google.com/">Google Ai Studio</span>
                         <span class="quick-link-btn" data-link="https://gemini.google.com/app">Google Gemini</span>
                         <span class="quick-link-btn" data-link="https://github.com">Github</span>
