--- a/tools/chaoyin/index.html
+++ b/tools/chaoyin/index.html
@@ -20,18 +20,11 @@
             darkMode: 'class',
             theme: {
                 extend: {
-                    fontFamily: {
-                        sans: ['Noto Sans SC', 'sans-serif'],
-                        serif: ['Noto Serif SC', 'serif'],
-                    }
+                    // 使用 Tailwind 默认系统字体栈
                 }
             }
         }
     </script>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;900&family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Icons (Lucide) -->
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- Custom Styles -->
@@ -101,7 +94,7 @@
                             <div class="pl-5 text-slate-400/80 dark:text-slate-500">
                                 <i data-lucide="search" width="20"></i>
                             </div>
-                            <input type="text" id="main-search-input" placeholder="输入单个汉字..." class="flex-1 h-full py-2 px-4 text-lg outline-none text-slate-800 dark:text-slate-100 placeholder:text-slate-400/60 dark:placeholder:text-slate-600 font-serif-sc bg-transparent tracking-wide" maxlength="1">
+                            <input type="text" id="main-search-input" placeholder="输入单个汉字..." class="flex-1 h-full py-2 px-4 text-lg outline-none text-slate-800 dark:text-slate-100 placeholder:text-slate-400/60 dark:placeholder:text-slate-600 font-serif bg-transparent tracking-wide" maxlength="1">
                             <button id="main-clear-btn" class="text-slate-300 hover:text-slate-500 dark:text-slate-600 dark:hover:text-slate-300 p-2 hidden transition-all duration-200 hover:bg-slate-100 dark:hover:bg-slate-800 rounded-full mr-1">
                                 <i data-lucide="x" width="16"></i>
                             </button>
@@ -160,7 +153,7 @@
             </button>
             
             <div class="flex items-center gap-4 mb-6">
-                <div class="w-14 h-14 rounded-2xl bg-orange-50 dark:bg-orange-500/10 flex items-center justify-center text-3xl font-serif-sc font-bold text-slate-800 dark:text-white border border-orange-100 dark:border-orange-500/20" id="modal-char-icon">
+                <div class="w-14 h-14 rounded-2xl bg-orange-50 dark:bg-orange-500/10 flex items-center justify-center text-3xl font-serif font-bold text-slate-800 dark:text-white border border-orange-100 dark:border-orange-500/20" id="modal-char-icon">
                     ?
                 </div>
                 <div>
