--- a/nav/index.html
+++ b/nav/index.html
@@ -121,7 +121,7 @@
                             <div class="pl-5 text-gray-400 group-focus-within:text-[#FF8C19] transition-colors duration-300">
                                 <i data-lucide="search" class="h-6 w-6"></i>
                             </div>
-                            <input type="text" id="search-input" class="h-[68px] w-full bg-transparent px-4 text-xl text-gray-800 placeholder-gray-400 outline-none dark:text-gray-100 font-medium tracking-wide" placeholder="百度一下，你就知道">
+                            <input type="text" id="search-input" class="h-[68px] w-full bg-transparent px-4 text-xl text-gray-800 placeholder-gray-400 outline-none dark:text-gray-100 font-medium tracking-wide" placeholder="搜索 百度...">
                             <button type="submit" class="mr-2 flex h-[52px] w-[52px] items-center justify-center rounded-xl bg-[#FF8C19] text-white transition-all duration-300 hover:bg-[#ff9d33] hover:scale-105 active:scale-95 shadow-[0_4px_12px_rgba(255,140,25,0.4)]">
                                 <i data-lucide="arrow-right" class="h-6 w-6"></i>
                             </button>
