--- a/tools/chaoyin/index.html
+++ b/tools/chaoyin/index.html
@@ -1,9 +1,18 @@
+
 <!DOCTYPE html>
-<html lang="zh-CN" class="">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>字·形 - 汉字关联探索</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>超引形近字查询 - 自在造字(ZIZAO)</title>
+    
+    <meta name="description" content="自在造字，专注字体字库产品制作与分享">
+    <meta name="author" content="自在造字">
+    <meta property="og:title" content="超引-形近字查询神器 - 自在造字(ZIZAO)">
+    <meta property="og:image" content="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251123/AR9P/ico.ico">
+    <meta property="og:url" content="https://www.zizao.top">
+    <meta property="og:type" content="website">
+    <link rel="icon" href="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251101/8hkj/ico.ico" type="zizaoicon">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
