--- a/hao.html
+++ b/hao.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>木头与字的设计导航</title>
-    <meta name="description" content="字体设计师-木头与字">
-    <meta name="author" content="木头与字">
-    <meta property="og:title" content="木头与字的设计导航">
+    <title>设计导航 - 自在造字</title>
     <meta property="og:image" content="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251123/AR9P/ico.ico">
     <meta property="og:url" content="https://www.zizao.top">
     <meta property="og:type" content="website">
