--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                     </div>
                 </div>
                 <div class="lg:w-[400px] xl:w-[480px] shrink-0 relative z-10 perspective-[1000px] group">
-                    <div class="absolute -right-20 -top-20 h-64 w-64 rounded-full bg-gradient-to-br from-blue-400/20 to-purple-400/20 blur-3xl dark:from-blue-600/10 dark:to-purple-600/10 pointer-events-none"></div>
+                    <div class="absolute -right-20 -top-20 h-64 w-64 rounded-full bg-gradient-to-br from-blue-400/20 to-purple-400/20 blur-3xl dark:from-blue-600/10 dark:to-purple-600/10 pointer-events-none hidden lg:block"></div>
                     
-                    <div class="absolute inset-0 translate-x-6 translate-y-6 rotate-6 rounded-[2.5rem] border border-gray-200 bg-white shadow-xl transition-transform duration-500 ease-out group-hover:translate-x-8 group-hover:translate-y-8 group-hover:rotate-12 dark:border-neutral-800 dark:bg-neutral-900"></div>
+                    <div class="absolute inset-0 translate-x-6 translate-y-6 rotate-6 rounded-[2.5rem] border border-gray-200 bg-white shadow-xl transition-transform duration-500 ease-out group-hover:translate-x-8 group-hover:translate-y-8 group-hover:rotate-12 dark:border-neutral-800 dark:bg-neutral-900 hidden lg:block"></div>
 
-                    <div class="absolute inset-0 translate-x-3 translate-y-3 rotate-3 rounded-[2.5rem] border border-gray-200 bg-white/80 shadow-xl backdrop-blur-sm transition-transform duration-500 ease-out group-hover:translate-x-4 group-hover:translate-y-4 group-hover:rotate-6 dark:border-neutral-800 dark:bg-neutral-900/80"></div>
+                    <div class="absolute inset-0 translate-x-3 translate-y-3 rotate-3 rounded-[2.5rem] border border-gray-200 bg-white/80 shadow-xl backdrop-blur-sm transition-transform duration-500 ease-out group-hover:translate-x-4 group-hover:translate-y-4 group-hover:rotate-6 dark:border-neutral-800 dark:bg-neutral-900/80 hidden lg:block"></div>
                     
                     <a href="#" target="_blank" class="relative aspect-[3/4] w-full overflow-hidden rounded-[2rem] bg-gray-100 dark:bg-neutral-900 shadow-2xl transition-transform duration-500 hover:-translate-y-1 block">
                          <img src="https://pic3.fukit.cn/autoupload/NWINCyTOTWqNUcPQazQq69iO_OyvX7mIgxFBfDMDErs/20251127/pFUu/680X600/111.jpg/webp" alt="Studio" class="size-full object-cover"> <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
