--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="mb-8 flex items-end justify-between border-b border-gray-100 pb-4 dark:border-neutral-800">
                     <div class="flex items-center gap-3">
                         <div class="h-2 w-2 rounded-full bg-black dark:bg-white"></div>
-                        <h2 class="text-sm font-bold uppercase tracking-widest text-gray-900 dark:text-white">为您推荐的设计工具</h2>
+                        <h2 class="text-sm font-bold uppercase tracking-widest text-gray-900 dark:text-white">为您推荐的字体产品</h2>
                     </div>
                     <a href="all-products.html" class="group flex items-center gap-2 text-sm font-medium text-gray-500 hover:text-black dark:text-neutral-400 dark:hover:text-white">
                         全部
