--- a/fonts/qidiansans.html
+++ b/fonts/qidiansans.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -156,7 +156,7 @@
     <!-- 底部栏占位 -->
     <footer id="footer-placeholder" class="bg-white pt-20 pb-12 dark:bg-neutral-950 border-t border-gray-100 dark:border-neutral-900"></footer>
     
-    <script src="../components.js"></script>
-    <script src="../script.js"></script>
+    <script src="./components.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
