--- a/hao.html
+++ b/hao.html
@@ -32,7 +32,7 @@
             },
         }
     </script>
-    <link rel="stylesheet" href="pages/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="min-h-screen bg-[#F2F2F7] text-gray-900 transition-colors duration-500 dark:bg-[#000000] dark:text-gray-100 font-sans selection:bg-[#FF8C19]/30 overflow-x-hidden">
 
@@ -166,7 +166,7 @@
         </div>
     </div>
 
-    <script src="pages/hao-data.js"></script>
-    <script src="pages/main.js"></script>
+    <script src="hao-data.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
